--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Site settings
-title: Mauricio Urraco
-description: Jekyll Theme Minimal Resume
+title: CV - Agustin Bergia Baragiotta
+description: Agustin Bergia Baragiotta - Resume
 # baseurl: "" # the subpath of your site, e.g. /blog
-# url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+#url: "192.168.0.56:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Mauricio Urraco
-user_description: I'm a Software Engineer from Argentina, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in world of Giving Circles working with Grapevine, a California based startup trying to improve the world through collaborative giving. I'm the first engineer they hired to work on the platform.
-user_title: Software Engineer
-email: mauriurraco@gmail.com
+username: Agustin Bergia Baragiotta
+user_description: Con 7 años de experiencia en desarrollo ETL, he desempeñado mi carrera en la industria bancaria, enfocándome en migraciones y desarrollo de Data Warehouses para bancos internacionales. 
+user_title: ETL Developer SR.
+email: agustin.bergia@gmail.com
 # twitter_username: lorem_ipsum
-instagram_username: mauriciourraco7
-facebook_username: mauricio.urraco
-linkedin_username: murraco
-github_username:  murraco
+#instagram_username: lorem_ipsum
+#facebook_username: lorem_ipsum.urraco
+linkedin_username: agustin-bergia-baragiotta-06371282
+github_username:  agustinbergia
 # medium_username: lorem_ipsum
 # medium_url: lorem_ipsum.medium.com
 # gplus_username:  lorem_ipsum
